--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=app
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:6500/Task
+spring.datasource.username=postgres
+spring.datasource.password=password
