--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=app
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:6500/Task
+spring.datasource.url=jdbc:postgresql://db/Task
 spring.datasource.username=postgres
 spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
