--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version : "3.8"
+version: "3.8"
 networks:
   test:
 
@@ -7,6 +7,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
+      - ./:/home/vscode/app
     tty: true
     networks:
       - test
